# python-workspace-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  README_en.md  pyproject.toml
.agents/instructions/: markdown.md  python.md  shell.md
.agents/skills/implementation-plan/: SKILL.md
.agents/skills/implementation-plan/templates/: implementation-plan.md
.agents/skills/repository-overview/: SKILL.md
.agents/skills/run-in-docker/: SKILL.md
.agents/skills/run-mypy/: SKILL.md
.agents/skills/run-pytest/: SKILL.md
.agents/skills/run-ruff-format/: SKILL.md
.agents/skills/targeted-repository-research/: SKILL.md  report-template.md
.claude/: CLAUDE.md
.claude/agents/: behavior-flow-researcher.md  bug-context-researcher.md  config-dependency-researcher.md  documentation-consistency-researcher.md  impact-scope-researcher.md  implementation-location-researcher.md  implementation-plan-context-researcher.md  implementation-plan-quality-reviewer.md  implementation-plan-strategy-designer.md  project-config-researcher.md  quality-and-test-researcher.md  repo-structure-researcher.md  runtime-architecture-researcher.md  symbol-trace-researcher.md  test-target-researcher.md
.claude/skills/implementation-plan/: SKILL.md
.claude/skills/implementation-plan/templates/: implementation-plan.md
.claude/skills/repository-overview/: SKILL.md  report-template.md
.claude/skills/run-mypy/: SKILL.md
.claude/skills/run-pytest/: SKILL.md
.claude/skills/run-ruff-check/: SKILL.md
.claude/skills/run-ruff-format/: SKILL.md
.claude/skills/targeted-repository-research/: SKILL.md  report-template.md
.codex/agents/: behavior-flow-researcher.toml  bug-context-researcher.toml  config-dependency-researcher.toml  documentation-consistency-researcher.toml  impact-scope-researcher.toml  implementation-location-researcher.toml  implementation-plan-context-researcher.toml  implementation-plan-quality-reviewer.toml  implementation-plan-strategy-designer.toml  project-config-researcher.toml  quality-and-test-researcher.toml  repo-structure-researcher.toml  runtime-architecture-researcher.toml  symbol-trace-researcher.toml  test-target-researcher.toml
.devcontainer/: devcontainer.json  init-env.sh  init-gpu.sh
.github/agents/: behavior-flow-researcher.agent.md  bug-context-researcher.agent.md  config-dependency-researcher.agent.md  documentation-consistency-researcher.agent.md  impact-scope-researcher.agent.md  implementation-location-researcher.agent.md  implementation-plan-context-researcher.agent.md  implementation-plan-quality-reviewer.agent.md  implementation-plan-strategy-designer.agent.md  project-config-researcher.agent.md  quality-and-test-researcher.agent.md  repo-structure-researcher.agent.md  runtime-architecture-researcher.agent.md  symbol-trace-researcher.agent.md  test-target-researcher.agent.md
.github/skills/docker-runner/: SKILL.md
.github/skills/pytest-safe-runner/: SKILL.md
.github/workflows/: ci.yml  docker-publish.yml
docker/: Dockerfile  build-docker.sh  common.sh  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  run-docker.sh
environments/python/: pyproject.toml
scripts/environments/: install-githooks.sh  mypy.sh  pytest.sh  ruff-check.sh  ruff-format.sh
scripts/pre-commit/: checks.sh  install-githooks.sh  mypy.sh  pytest.sh  ruff-check.sh  ruff-format.sh  shell-check.sh  shell-format.sh
